--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq openssh-client openssh-server
   - python setup.py install
-script: python test.py
+script: SCPPY_PORT=10022 python test.py
