--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,12 @@ python:
   - "3.5"
   - "3.6"
 install:
+  - pip install readme_renderer
   - .travis/setup_ssh.sh
   - sudo apt-get update -qq
   - sudo apt-get install -qq openssh-client openssh-server
   - if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then pip install unittest2; fi
   - python setup.py install
-script: SCPPY_PORT=10022 python test.py
+script:
+  - SCPPY_PORT=10022 python test.py
+  - python setup.py check -r -s
