--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
           - "3.9"
         include:
           - os: ubuntu-20.04
-            python: "3.5"
+            python-version: "3.5"
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
