CI: Only run in containers

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,39 +5,16 @@ on:
   - pull_request
 
 jobs:
-  build:
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        python-version:
-          - "3.7"
-          - "3.8"
-          - "3.10"
-          - "3.12"
-    runs-on: ${{ matrix.os }}
-    steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    - run: pip install setuptools
-    - run: pip install readme_renderer
-    - name: Install SSH
-      run: |
-        sudo apt-get update -qq
-        sudo apt-get install -qq openssh-client openssh-server
-    - name: Set up SSH
-      run: .ci/setup_ssh.sh
-    - run: pip install -e .
-    - run: SCPPY_PORT=10022 python test.py
-    - run: python setup.py check -r -s
-
-  build-container:
+  test:
     strategy:
       matrix:
         python-version:
           - "2.7"
           - "3.5"
+          - "3.7"
+          - "3.8"
+          - "3.10"
+          - "3.13"
     runs-on: ubuntu-latest
     container:
       image: python:${{ matrix.python-version }}
